[gd_scene load_steps=5 format=3 uid="uid://dy8uudgyixnjg"]

[ext_resource type="Texture2D" uid="uid://dygq8iixtbg6q" path="res://assets/images/lifebar1.png" id="1_7roag"]
[ext_resource type="Theme" uid="uid://dij1y8wlt3r37" path="res://themes/main_theme.tres" id="1_8qmsg"]
[ext_resource type="Script" uid="uid://dd1f28xcihvwb" path="res://locations/template/battle/battle_ui.gd" id="1_12gqm"]
[ext_resource type="Texture2D" uid="uid://cbom5nvr4fyjb" path="res://assets/images/lifebar2.png" id="2_8qmsg"]

[node name="BattleUi" type="CanvasLayer"]
script = ExtResource("1_12gqm")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_8qmsg")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ActionsContainer" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
columns = 3

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="LifebarPlayer" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 48.0
offset_top = 176.0
offset_right = 80.0
offset_bottom = 184.0
texture_under = ExtResource("1_7roag")
texture_progress = ExtResource("2_8qmsg")

[node name="LifebarNPC" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 240.0
offset_top = 176.0
offset_right = 272.0
offset_bottom = 184.0
value = 50.0
texture_under = ExtResource("1_7roag")
texture_progress = ExtResource("2_8qmsg")
